# docs/swagger/api.yaml
@@ -109,7 +109,49 @@ paths:
             Problem occured while printing the receipt
           schema:
             $ref: "#/definitions/RequestTimeoutError"
-
+            
+  /v2/receipts/req/print:
+    post:
+      summary: Print Receipts
+      parameters:
+        - in: body
+          name: request
+          description: Prining receipts and fiscal receipts
+          required: true
+          schema:
+            $ref: '#/definitions/PrintReceiptRequest'
+      description: Saving receipts to be pritned asynchronously
+      responses:
+        200:
+          description: Receipt saved and queued to be printed
+          schema:
+              $ref: '#/definitions/Receipt'
+        400:
+          description:
+            The requested receipt is already saved
+          schema:
+              $ref: "#/definitions/Receipt"
+              
+  /v2/receipts/req/print/status/{id}:
+    get:
+      summary: Get receipt status
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+          description: The id of the receipt
+      responses:
+        200:
+          description: Receipt found
+          content:
+            application/json:
+              shecma:
+                type: string
+          example: "PRINTING"
+        404:
+          description: Receipt not found
+  
   /v1/reports/operator/print:
     post:
       summary: Prints Report
@@ -194,6 +236,10 @@ definitions:
   PrintReceiptRequest:
     type: object
     properties:
+      receiptId:
+        type: string
+        description: Unique id representing the receipt
+        example: "receiptId"
       sourceIp:
         type: string
         description: Unique ip representing the owner of the device.
@@ -206,53 +252,60 @@ definitions:
         type: boolean
         description: true means fiscal receipt, false means text
       receipt:
-        type: object
-        description: Represents receipt item
-        properties:
-          receiptId:
-            type: string
-            description: Receipt ID
-            example: "123"
-          currency:
-            type: string
-            description: Currency
-            example: "USD"
-          prefixLines:
-            type: array
-            items:
-              type: string
-          suffixLines:
-            type: array
-            items:
-              type: string
-          amount:
-            type: number
-            format: double
-            description: amount to be paid
-            example: 1.0
-          receiptItems:
-            type: object
-            description: Represents receipt item
-            properties:
-              name:
-                type: string
-                description: Name of the item
-                example:
-              quantity:
-                type: number
-                format: double
-                description: Quantity of the item
-                example: 2.0
-              price:
-                type: number
-                format: double
-                description: Price of the item (with vat)
-                example: 1.0
-              vat:
-                type: number
-                format: double
-                description: VAT
-                example: 20.0
+        $ref: '#/definitions/Receipt'
+  Receipt:
+    type: object
+    description: Represents receipt item
+    properties:
+      receiptId:
+        type: string
+        description: Receipt ID
+        example: "123"
+      currency:
+        type: string
+        description: Currency
+        example: "USD"
+      prefixLines:
+        type: array
+        items:
+          type: string
+      suffixLines:
+        type: array
+        items:
+          type: string
+      amount:
+        type: number
+        format: double
+        description: amount to be paid
+        example: 1.0
+      receiptItems:
+        type: array
+        items:
+          $ref: '#/definitions/ReceiptItem'
+  ReceiptItem:
+    type: object
+    description: Represents receipt item
+    properties:
+      name:
+        type: string
+        description: Name of the item
+        example:
+      quantity:
+        type: number
+        format: double
+        description: Quantity of the item
+        example: 2.0
+      price:
+        type: number
+        format: double
+        description: Price of the item (with vat)
+        example: 1.0
+      vat:
+        type: number
+        format: double
+        description: VAT
+        example: 20.0
+              
   PrintReceiptResponse:
     type: object
     properties:
